attempt to fix white space issue, .contact not used now

--- a/css/style.css
+++ b/css/style.css
@@ -33,10 +33,10 @@ section {
 }
 
 .contact {
-  height: 100vh;
-  width: 100%;
-  overflow: hidden;
-  overflow-x: hidden; 
+/*  height: 100vh;
+  width: 100%;*/
+/*  overflow: hidden;
+  overflow-x: hidden; */
 /*  -webkit-filter: blur(0.000001px);*/
 /*  -webkit-font-smoothing: antialiased !important;*/
 /*  text-shadow: 1px 1px 1px rgba(0,0,0,0.004);*/
